# sat-solver

./: .gitignore  CMakeLists.txt
src/formulas/: formula.cpp  formula.hpp
src/utils/: llist.cpp  llist.hpp  prims.hpp  vartree.cpp  vartree.hpp
tests/lib/gtest/docs/: FAQ.md
tests/utils_tests/: util_tests_main.cpp  vartree_test.cpp
